Cleaning up the initial commit. Adding Material-UI.
Cleaning up the initial commit. Adding Material-UI.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Recipes",
+  "name": "KatieMae's Recipe Book",
   "icons": [
     {
       "src": "favicon.ico",
